# custom-compiler

./: CMakeLists.txt  Makefile  README.md  build.sh  generated  generated.asm  lexer.c  lexer.h  main  main.c  parser.c  parser.h  plan.txt  test.c  test.g
asm/: generated.asm
code generator/: code_generator.c  code_generator.h
code_generator/: code_generator.c  code_generator.h
lexer/: lexer.c  lexer.h
parser/: parser.c  parser.h
scope/: stack.c  stack.h
symbol table/: hashmap.c  hashmap.h
symbol_table/: hashmap.c  hashmap.h
